Fixed menu z-index bug, adjusted project card styling

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -65,9 +65,9 @@ html {
         header {
             width: 100%;
             position: absolute;
+            z-index: 10;
         }
         main {
-            z-index: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -137,12 +137,12 @@ html {
             cursor: pointer;
             //z-index: 2;
             background: url(../images/icons/menu.svg) no-repeat center center;
-            //background-color: $main-light;
+            background-color: $main-light;
             width: 20px;
             height: 20px;
             padding: 10px;
             transition: 0.1s ease-out;
-            border-radius: 5px;
+            border-radius: 20px;
             //box-shadow: var(--shadow-elevation-low);
         }
         .topnav {
@@ -185,7 +185,7 @@ html {
         display: block;
         //overflow: visible;
         //opacity: 1;
-        z-index: -10;
+        //z-index: 10;
         //height: 100;
     }
     .page {
@@ -339,7 +339,7 @@ html {
             //overflow: hidden;
             background-color: $main-light;
             margin: 16px;
-            height: 256px;
+            //height: 256px;
             width: 100%;
             border-radius: 10px;
             transition: 0.1s ease-out;
@@ -358,7 +358,6 @@ html {
                 justify-content: space-between;
                 align-self: flex-start;
                 padding: 16px;
-                padding-top: 8px;
                 text-align: left;
                 h3 {
                     padding: 0px;
@@ -366,13 +365,54 @@ html {
                     align-self: flex-start;
                 }
                 p {
-                    margin-top: 8px;;
+                    margin-top: 16px;
+                    align-self: flex-start;
                 }
                 a {
+                    margin-top: 16px;;
                     color: $main-dark;
                     text-decoration: none;
                     display: flex;
+                    flex-direction: row;
+                    justify-content: space-around;
+                    align-items: center;
                     align-self: flex-end;
+                    transition: 0.1s ease-out;
+                    p {
+                        margin-top: 0px;
+                        margin-right: 8px;
+                    }
+                }
+                a:hover {
+                    font-weight: bold;
+                    transition: 0.1s ease-out;
+                }
+                .languages {
+                    margin-top: 8px;
+                    width: 50%;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: flex-start;
+                    justify-content: space-between;
+                    align-self: flex-start;
+                    p {
+                        font-size: $mobile-p-size - 2;
+                        display: block;
+                        margin-top: 0px;
+                        padding-right: 8px;
+                        padding-left: 8px;
+                        color: $main-light;
+                        border-radius: 20px;
+                    }
+                    .lang-1 {
+                        background-color: orangered;
+                    }
+                    .lang-2 {
+                        background-color: blue;
+                    }
+                    .lang-3 {
+                        background-color: plum;
+                    }
                 }
             }
         }
